--- a/signup.html
+++ b/signup.html
@@ -48,7 +48,7 @@
         <!-- add home button here -->
         <div style="flex: 1; text-align: left;">
             <a href="hrs.html" style="text-decoration: none; color: #000;">
-                <h2 style="margin: 0;">HOME</h2>
+                <h2 style="margin: 0; font-size: 32px; font-weight: bolder;">HOME</h2>
             </a>
         </div>
 
@@ -418,7 +418,7 @@
 
 
 <!-- post footer -->
-    <footer style="background-color: #333; padding: 20px 0; border-top: 1px solid #ddd;">
+    <footer style="background-color: #333; padding: 20px 0; border-top: 1px solid #ddd; margin-top: 30px;">
         <div style="max-width: 960px; margin: 0 auto; display: flex; justify-content: space-around; flex-wrap: wrap;">
             <div style="flex: 1; padding: 0 10px; min-width: 150px;">
                 <p style="margin-bottom: 10px; color: #fff;">Download  HRS app for exciting offers.</p>
