all done i think

--- a/famousplaces.html
+++ b/famousplaces.html
@@ -631,7 +631,7 @@
     </script>
 </main>
 
-<div style="border-radius: 12px; padding: 25px; background: linear-gradient(to bottom, #e6f3fa, #d9e8f0); color: #1a2b33; font-family: Arial, sans-serif; max-width: 90%; margin: 20px auto; box-shadow: 0 6px 12px rgba(0,0,0,0.15); display: flex; gap: 20px; align-items: stretch;">
+<div style="border-radius: 12px; padding: 25px; background: linear-gradient(to bottom, #e6f3fa, #d9e8f0); color: #1a2b33; font-family: Arial, sans-serif; max-width: 80%; margin: 20px auto; box-shadow: 0 6px 12px rgba(0,0,0,0.15); display: flex; gap: 20px; align-items: stretch;">
   
     <div style="flex: 1; min-width: 0;">
         <h2 style="margin-top: 0; color: #003d4d; text-align: center; font-size: 28px; transition: all 0.3s ease; cursor: pointer;" onmouseover="this.style.color='#002a36'; this.style.textDecoration='underline';" onmouseout="this.style.color='#003d4d'; this.style.textDecoration='none';">Welcome to Hitaishi Rooms & Services</h2>
@@ -657,9 +657,52 @@
     </div>
     <!-- Image -->
     <div style="flex: 0 0 400px; display: flex; align-items: center;">
-        <img src="images/hitaishiroom.png" alt="Hitaishi Rooms" style="width: 100%; height: auto; border-radius: 8px; object-fit: cover; box-shadow: 0 4px 8px rgba(0,0,0,0.1); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.03)'; this.style.boxShadow='0 6px 12px rgba(0,0,0,0.2)';" onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 8px rgba(0,0,0,0.1)';">
+        <img src="images/hitaishiroom.png" alt="Hitaishi Rooms" style="width:auto; height: auto; border-radius: 8px; object-fit: cover; box-shadow: 0 4px 8px rgba(0,0,0,0.1); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.03)'; this.style.boxShadow='0 6px 12px rgba(0,0,0,0.2)';" onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 8px rgba(0,0,0,0.1)';">
     </div>
 </div>
+
+
+
+<div style="max-width: 80%; margin: 50px auto; font-family: Arial, sans-serif; padding: 20px;">
+        <h2 style="text-align: center; color: #0066cc; font-size: 32px; margin-bottom: 40px; text-transform: uppercase; letter-spacing: 2px;">Benefits of Hitaishi for Visiting Famous Places</h2>
+        <div style="display: flex; justify-content: space-between; gap: 20px;">
+            <!-- Card 1: Expert Guided Tours -->
+            <div style="flex: 1 1 33.33%; background: #ffe4e1; border-radius: 10px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease; max-width: 33.33%;" onmouseover="this.style.transform='scale(1.05)'; this.style.boxShadow='0 8px 16px rgba(0,0,0,0.2)';" onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 8px rgba(0,0,0,0.1)';">
+                <h3 style="color: #c0392b; font-size: 24px; margin: 0 0 15px; text-align: center;">Expert Guided Tours</h3>
+                <p style="color: #333; line-height: 1.6; margin: 0 0 15px; font-size: 16px;">Our knowledgeable guides enhance your visits to famous places like the Taj Mahal and Agra Fort.</p>
+                <ul style="color: #333; line-height: 1.6; margin: 0; padding-left: 20px; font-size: 16px;">
+                    <li>In-depth historical and cultural insights.</li>
+                    <li>Personalized tour experiences.</li>
+                    <li>Skip-the-line access at select sites.</li>
+                </ul>
+            </div>
+
+            <!-- Card 2: Convenient Transportation -->
+            <div style="flex: 1 1 33.33%; background: #e0f7fa; border-radius: 10px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease; max-width: 33.33%;" onmouseover="this.style.transform='scale(1.05)'; this.style.boxShadow='0 8px 16px rgba(0,0,0,0.2)';" onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 8px rgba(0,0,0,0.1)';">
+                <h3 style="color: #00796b; font-size: 24px; margin: 0 0 15px; text-align: center;">Convenient Transportation</h3>
+                <p style="color: #333; line-height: 1.6; margin: 0 0 15px; font-size: 16px;">Seamless travel to famous places with our private cars and shuttles.</p>
+                <ul style="color: #333; line-height: 1.6; margin: 0; padding-left: 20px; font-size: 16px;">
+                    <li>Door-to-door service from Hitaishi.</li>
+                    <li>Flexible schedules for your convenience.</li>
+                    <li>Comfortable, air-conditioned vehicles.</li>
+                </ul>
+            </div>
+
+            <!-- Card 3: Exclusive Tour Packages -->
+            <div style="flex: 1 1 33.33%; background: #f0f4c3; border-radius: 10px; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease; max-width: 33.33%;" onmouseover="this.style.transform='scale(1.05)'; this.style.boxShadow='0 8px 16px rgba(0,0,0,0.2)';" onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 8px rgba(0,0,0,0.1)';">
+                <h3 style="color: #558b2f; font-size: 24px; margin: 0 0 15px; text-align: center;">Exclusive Tour Packages</h3>
+                <p style="color: #333; line-height: 1.6; margin: 0 0 15px; font-size: 16px;">Curated packages to explore multiple famous places in one trip.</p>
+                <ul style="color: #333; line-height: 1.6; margin: 0; padding-left: 20px; font-size: 16px;">
+                    <li>Cost-effective multi-site tours.</li>
+                    <li>Includes meals and entry fees.</li>
+                    <li>Tailored to your interests.</li>
+                </ul>
+            </div>
+        </div>
+</div>
+
+
+    
 
 <div style="width: 80%; margin: 0 auto; padding: 40px; background-color: #ffffff; font-family: Arial, sans-serif; border-top: 2px solid #ccc;">
     <h2 style="color: #1a1a1a; font-size: 28px; margin-bottom: 15px; text-align: center; transition: all 0.3s ease; cursor: pointer;" onmouseover="this.style.color='#007a99'; this.style.textDecoration='underline';" onmouseout="this.style.color='#1a1a1a'; this.style.textDecoration='none';">Why Choose Hitaishi Rooms and Services?</h2>
@@ -684,6 +727,105 @@
         </div>
     </div>
 </div>
+
+
+
+
+
+    <div style="max-width: 800px; margin: 50px auto; font-family: Arial, sans-serif; padding: 20px;">
+        <div style="text-align: center; margin-bottom: 30px; display: flex; align-items: center; justify-content: center;">
+            <span style="display: inline-block; width: 50px; height: 3px; background: #ff6347; margin-right: 15px;"></span>
+            <h2 style="color: #0066cc; font-family: Arial, sans-serif; font-size: 28px; margin: 0; text-transform: uppercase; letter-spacing: 2px;">FAQS</h2>
+            <span style="display: inline-block; width: 50px; height: 3px; background: #ff6347; margin-left: 15px;"></span>
+        </div>
+                
+                <div style="margin-bottom: 10px;">
+                    <div style="background: #f4f4f4; padding: 15px; cursor: pointer; border-radius: 5px; transition: background 0.3s ease; position: relative;" onmouseover="this.style.background='#e0e0e0';" onmouseout="this.style.background='#f4f4f4';" onclick="toggleAnswer(this)">
+                        <span style="font-weight: bold; color: #333;">Which famous places can I visit near Hitaishi Rooms and Services?</span>
+                        <span style="position: absolute; right: 15px; font-size: 20px; transition: transform 0.3s ease;">+</span>
+                    </div>
+                    <div style="max-height: 0; overflow: hidden; padding: 0 15px; transition: max-height 0.3s ease, padding 0.3s ease;">
+                        <p style="color: #555; line-height: 1.6; margin: 15px 0;">Hitaishi Rooms and Services is ideally located near several attractions, including the Taj Mahal (20 km), Agra Fort (15 km), and Fatehpur Sikri (40 km). Local markets and cultural sites are also within easy reach.</p>
+                    </div>
+                </div>
+
+                <div style="margin-bottom: 10px;">
+                    <div style="background: #f4f4f4; padding: 15px; cursor: pointer; border-radius: 5px; transition: background 0.3s ease; position: relative;" onmouseover="this.style.background='#e0e0e0';" onmouseout="this.style.background='#f4f4f4';" onclick="toggleAnswer(this)">
+                        <span style="font-weight: bold; color: #333;">Are guided tours available for nearby famous places?</span>
+                        <span style="position: absolute; right: 15px; font-size: 20px; transition: transform 0.3s ease;">+</span>
+                    </div>
+                    <div style="max-height: 0; overflow: hidden; padding: 0 15px; transition: max-height 0.3s ease, padding 0.3s ease;">
+                        <p style="color: #555; line-height: 1.6; margin: 15px 0;">Yes, we offer guided tours to major attractions like the Taj Mahal, Agra Fort, and more. Our experienced guides provide insightful historical and cultural details. Book at our front desk!</p>
+                    </div>
+                </div>
+
+                <div style="margin-bottom: 10px;">
+                    <div style="background: #f4f4f4; padding: 15px; cursor: pointer; border-radius: 5px; transition: background 0.3s ease; position: relative;" onmouseover="this.style.background='#e0e0e0';" onmouseout="this.style.background='#f4f4f4';" onclick="toggleAnswer(this)">
+                        <span style="font-weight: bold; color: #333;">What is the best time to visit the Taj Mahal?</span>
+                        <span style="position: absolute; right: 15px; font-size: 20px; transition: transform 0.3s ease;">+</span>
+                    </div>
+                    <div style="max-height: 0; overflow: hidden; padding: 0 15px; transition: max-height 0.3s ease, padding 0.3s ease;">
+                        <p style="color: #555; line-height: 1.6; margin: 15px 0;">The best time to visit the Taj Mahal is early morning at sunrise for cooler weather, fewer crowds, and stunning views. October to March offers pleasant weather for sightseeing.</p>
+                    </div>
+                </div>
+
+                <div style="margin-bottom: 10px;">
+                    <div style="background: #f4f4f4; padding: 15px; cursor: pointer; border-radius: 5px; transition: background 0.3s ease; position: relative;" onmouseover="this.style.background='#e0e0e0';" onmouseout="this.style.background='#f4f4f4';" onclick="toggleAnswer(this)">
+                        <span style="font-weight: bold; color: #333;">Can I arrange transportation to these famous places?</span>
+                        <span style="position: absolute; right: 15px; font-size: 20px; transition: transform 0.3s ease;">+</span>
+                    </div>
+                    <div style="max-height: 0; overflow: hidden; padding: 0 15px; transition: max-height 0.3s ease, padding 0.3s ease;">
+                        <p style="color: #555; line-height: 1.6; margin: 15px 0;">Absolutely! We provide transportation services, including private cars and shuttles, to all major attractions. Contact our concierge for customized travel arrangements.</p>
+                    </div>
+                </div>
+
+                <div style="margin-bottom: 10px;">
+                    <div style="background: #f4f4f4; padding: 15px; cursor: pointer; border-radius: 5px; transition: background 0.3s ease; position: relative;" onmouseover="this.style.background='#e0e0e0';" onmouseout="this.style.background='#f4f4f4';" onclick="toggleAnswer(this)">
+                        <span style="font-weight: bold; color: #333;">Are there any entry fees for these attractions?</span>
+                        <span style="position: absolute; right: 15px; font-size: 20px; transition: transform 0.3s ease;">+</span>
+                    </div>
+                    <div style="max-height: 0; overflow: hidden; padding: 0 15px; transition: max-height 0.3s ease, padding 0.3s ease;">
+                        <p style="color: #555; line-height: 1.6; margin: 15px 0;">Yes, most attractions like the Taj Mahal and Agra Fort have entry fees, which vary for domestic and international visitors. We can provide detailed fee information upon request.</p>
+                    </div>
+                </div>
+
+                <div style="margin-bottom: 10px;">
+                    <div style="background: #f4f4f4; padding: 15px; cursor: pointer; border-radius: 5px; transition: background 0.3s ease; position: relative;" onmouseover="this.style.background='#e0e0e0';" onmouseout="this.style.background='#f4f4f4';" onclick="toggleAnswer(this)">
+                        <span style="font-weight: bold; color: #333;">Do you offer packages that include visits to multiple places?</span>
+                        <span style="position: absolute; right: 15px; font-size: 20px; transition: transform 0.3s ease;">+</span>
+                    </div>
+                    <div style="max-height: 0; overflow: hidden; padding: 0 15px; transition: max-height 0.3s ease, padding 0.3s ease;">
+                        <p style="color: #555; line-height: 1.6; margin: 15px 0;">Yes, we offer curated packages combining visits to the Taj Mahal, Agra Fort, Fatehpur Sikri, and other local gems. Check with our tour desk for exclusive deals!</p>
+                    </div>
+                </div>
+    </div>
+
+    <script>
+        function toggleAnswer(element) {
+            const allItems = document.querySelectorAll('div[onclick="toggleAnswer(this)"]');
+            allItems.forEach(item => {
+                const answer = item.nextElementSibling;
+                const arrow = item.querySelector('span:last-child');
+                if (item === element) {
+                    const isOpen = answer.style.maxHeight !== '0px';
+                    answer.style.maxHeight = isOpen ? '0px' : '200px';
+                    answer.style.padding = isOpen ? '0 15px' : '15px 15px';
+                    arrow.style.transform = isOpen ? 'rotate(0deg)' : 'rotate(45deg)';
+                } else {
+                    answer.style.maxHeight = '0px';
+                    answer.style.padding = '0 15px';
+                    arrow.style.transform = 'rotate(0deg)';
+                }
+            });
+        }
+    </script>
+
+
+
+
+
+
+
     <!-- Footer -->
      <!-- post footer -->
     <footer style="background-color: #333; padding: 20px 0; border-top: 1px solid #ddd;">
