--- a/hrs.html
+++ b/hrs.html
@@ -651,7 +651,7 @@
                         <li style="margin-bottom: 10px;"><a href="famousplaces.html" style="text-decoration: none;">Countries</a></li>
                         <li style="margin-bottom: 10px;"><a href="propertypage.html" style="text-decoration: none;">Regions</a></li>
                         <li style="margin-bottom: 10px;"><a href="famousplaces.html" style="text-decoration: none;">Districts</a></li>
-                        <li style="margin-bottom: 10px;"><a href="propertypage.html" style="text-decoration: none;">Airports</a></li>
+                        <li style="margin-bottom: 10px;"><a href="travelagents.html" style="text-decoration: none;">Airports</a></li>
                         <li style="margin-bottom: 10px;"><a href="properties.html" style="text-decoration: none;">Hotels</a></li>
                         <li style="margin-bottom: 10px;"><a href="famousplaces.html" style="text-decoration: none;">Places of interest</a></li>
                     </ul>
@@ -672,10 +672,10 @@
                     <ul style="list-style: none; padding: 0;">
                         <li style="margin-bottom: 10px;"><a href="famousplaces.html" style="text-decoration: none;">Unique places to stay</a></li>
                         <li style="margin-bottom: 10px;"><a href="about_us.html" style="text-decoration: none;">Reviews</a></li>
-                        <li style="margin-bottom: 10px;"><a href="roomtypes.html" style="text-decoration: none;">Discover monthly stays</a></li>
-                        <li style="margin-bottom: 10px;"><a href="about_us.html" style="text-decoration: none;">Travel articles</a></li>
+                        <li style="margin-bottom: 10px;"><a href="travelagents.html" style="text-decoration: none;">Discover monthly stays</a></li>
+                        <li style="margin-bottom: 10px;"><a href="travelagents.html" style="text-decoration: none;">Travel articles</a></li>
                         <li style="margin-bottom: 10px;"><a href="roomtypes.html" style="text-decoration: none;">Seasonal and holiday deals</a></li>
-                        <li style="margin-bottom: 10px;"><a href="about_us.html" style="text-decoration: none;">Traveller Review Awards</a></li>
+                        <li style="margin-bottom: 10px;"><a href="travelagents.html" style="text-decoration: none;">Traveller Review Awards</a></li>
                     </ul>
                 </div>
    
@@ -684,7 +684,7 @@
                         <li style="margin-bottom: 10px;"><a href="customerservicehelp.html" style="text-decoration: none;">Car hire</a></li>
                         <li style="margin-bottom: 10px;"><a href="customerservicehelp.html" style="text-decoration: none;">Flight finder</a></li>
                         <li style="margin-bottom: 10px;"><a href="properties.html" style="text-decoration: none;">Restaurant reservations</a></li>
-                        <li style="margin-bottom: 10px;"><a href="" style="text-decoration: none;">hrs.com for Travel Agents</a></li>
+                        <li style="margin-bottom: 10px;"><a href="travelagents.html" style="text-decoration: none;">hrs.com for Travel Agents</a></li>
                     </ul>
                 </div>
    
@@ -702,9 +702,9 @@
                 </div>
                 <div style="flex: 1; min-width: 150px;">
                     <ul style="list-style: none; padding: 0;">
-                        <li style="margin-bottom: 10px;"><a href="about_us.html" style="text-decoration: none;">Investor relations</a></li>
+                        <li style="margin-bottom: 10px;"><a href="travelagents.html" style="text-decoration: none;">Investor relations</a></li>
                         <li style="margin-bottom: 10px;"><a href="about_us.html" style="text-decoration: none;">Terms & Conditions</a></li>
-                        <li style="margin-bottom: 10px;"><a href="about_us.html" style="text-decoration: none;">Partner dispute</a></li>
+                        <li style="margin-bottom: 10px;"><a href="travelagents.html" style="text-decoration: none;">Partner dispute</a></li>
                         <li style="margin-bottom: 10px;"><a href="about_us.html" style="text-decoration: none;">How we work</a></li>
                         <li style="margin-bottom: 10px;"><a href="about_us.html" style="text-decoration: none;">Privacy & Cookie Statement</a></li>
                         <li style="margin-bottom: 10px;"><a href="about_us.html" style="text-decoration: none;">Modern Slavery Statement</a></li>
@@ -741,7 +741,7 @@
             <div style="flex: 1; padding: 0 10px; min-width: 150px;">
                 <ul style="list-style: none; padding: 0;">
                     <li style="margin-bottom: 5px;"><a href="propertypage.html" style="color: #fff; text-decoration: none;">Official  HRS Blog</a></li>
-                    <li style="margin-bottom: 5px;"><a href="" style="color: #fff; text-decoration: none;">Investor Relations</a></li>
+                    <li style="margin-bottom: 5px;"><a href="travelagents.html" style="color: #fff; text-decoration: none;">Investor Relations</a></li>
                     <li style="margin-bottom: 5px;"><a href="hrsbusiness.html" style="color: #fff; text-decoration: none;"> HRS Circle</a></li>
                     <li style="margin-bottom: 5px;"><a href="hrsbusiness.html" style="color: #fff; text-decoration: none;"> HRS Frames</a></li>
                 </ul>
