ready for review

--- a/visitsiteforbussiness.html
+++ b/visitsiteforbussiness.html
@@ -795,34 +795,34 @@
             </div>
             <div style="flex: 1; padding: 0 10px; min-width: 150px;">
                 <ul style="list-style: none; padding: 0;">
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;">About Us</a></li>
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;">Teams/Careers</a></li>
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;">Blogs</a></li>
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;">Support</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">About Us</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Teams/Careers</a></li>
+                    <li style="margin-bottom: 5px;"><a href="propertypage.html" style="color: #fff; text-decoration: none;">Blogs</a></li>
+                    <li style="margin-bottom: 5px;"><a href="customerservicehelp.html" style="color: #fff; text-decoration: none;">Support</a></li>
                 </ul>
             </div>
             <div style="flex: 1; padding: 0 10px; min-width: 150px;">
                 <ul style="list-style: none; padding: 0;">
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;">Official  HRS Blog</a></li>
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;">Investor Relations</a></li>
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;"> HRS Circle</a></li>
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;"> HRS Frames</a></li>
+                    <li style="margin-bottom: 5px;"><a href="propertypage.html" style="color: #fff; text-decoration: none;">Official  HRS Blog</a></li>
+                    <li style="margin-bottom: 5px;"><a href="travelagents.html" style="color: #fff; text-decoration: none;">Investor Relations</a></li>
+                    <li style="margin-bottom: 5px;"><a href="hrsbusiness.html" style="color: #fff; text-decoration: none;"> HRS Circle</a></li>
+                    <li style="margin-bottom: 5px;"><a href="hrsbusiness.html" style="color: #fff; text-decoration: none;"> HRS Frames</a></li>
                 </ul>
             </div>
             <div style="flex: 1; padding: 0 10px; min-width: 150px;">
                 <ul style="list-style: none; padding: 0;">
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;">Terms and conditions</a></li>
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;">Guest Policies</a></li>
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;">Privacy Policy</a></li>
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;">Trust And Safety</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Terms and conditions</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Guest Policies</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Privacy Policy</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Trust And Safety</a></li>
                 </ul>
             </div>
             <div style="flex: 1; padding: 0 10px; min-width: 150px;">
                 <ul style="list-style: none; padding: 0;">
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;">Cyber Security</a></li>
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;">Cyber Security Awareness</a></li>
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;">Responsible Disclosure</a></li>
-                    <li style="margin-bottom: 5px;"><a href="#" style="color: #fff; text-decoration: none;">Advertise your Homes</a></li>
+                    <li style="margin-bottom: 5px;"><a href="propertypage.html" style="color: #fff; text-decoration: none;">Cyber Security</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Cyber Security Awareness</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Responsible Disclosure</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Advertise your Homes</a></li>
                 </ul>
             </div>
         </div>
@@ -832,19 +832,19 @@
         <div style="background-color: #333; padding: 20px 0;">
             <div style="max-width: 960px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center;">
                 <div style="display: flex; align-items: center;">
-                    <a href="#" style="display: inline-block; margin-right: 20px; color: #fff; font-size: 24px;">
+                    <a href="https://www.facebook.com/" style="display: inline-block; margin-right: 20px; color: #fff; font-size: 24px;">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
-                    <a href="#" style="display: inline-block; margin-right: 20px; color: #fff; font-size: 24px;">
+                    <a href="https://www.instagram.com/" style="display: inline-block; margin-right: 20px; color: #fff; font-size: 24px;">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="#" style="display: inline-block; margin-right: 20px; color: #fff; font-size: 24px;">
+                    <a href="https://www.twitter.com/" style="display: inline-block; margin-right: 20px; color: #fff; font-size: 24px;">
                         <i class="fa-brands fa-twitter"></i>
                     </a>
-                    <a href="#" style="display: inline-block; margin-right: 20px; color: #fff; font-size: 24px;">
+                    <a href="https://www.youtube.com/" style="display: inline-block; margin-right: 20px; color: #fff; font-size: 24px;">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
-                    <a href="#" style="display: inline-block; color: #fff; font-size: 24px;">
+                    <a href="https://www.pinterest.com/" style="display: inline-block; color: #fff; font-size: 24px;">
                         <i class="fa-brands fa-pinterest"></i>
                     </a>
                 </div>
