--- a/listproperty.html
+++ b/listproperty.html
@@ -494,63 +494,79 @@
 
 
 
-<!--  Footer -->
-<div style="background-color: #333; padding: 20px 0; border-top: 1px solid #ddd; color: #fff;">
-  <div style="max-width: 960px; margin: 0 auto; display: flex; justify-content: space-around; flex-wrap: wrap; gap: 20px;">
-    <div style="flex: 1; min-width: 150px; padding: 0 10px;">
-      <p style="margin: 0;">Download HRS app for exciting offers.</p>
-      <div>
-        <a href="#"><img src="https://static.vecteezy.com/system/resources/thumbnails/012/871/374/small/app-store-download-button-in-white-colors-download-on-the-apple-app-store-free-png.png" alt="App Store" style="width: 120px; margin-right: 10px;"></a>
-        <a href="#"><img src="https://static.vecteezy.com/system/resources/previews/012/871/364/non_2x/google-play-store-download-button-in-white-colors-download-on-the-google-play-store-free-png.png" alt="Google Play" style="width: 120px; margin-right: 10px;"></a>
-      </div>
-    </div>
-    <div style="flex: 1; min-width: 150px; padding: 0 10px;">
-      <ul style="list-style: none; padding: 0;">
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">About Us</a></li>
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">Teams/Careers</a></li>
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">Blogs</a></li>
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">Support</a></li>
-      </ul>
-    </div>
-    <div style="flex: 1; min-width: 150px; padding: 0 10px;">
-      <ul style="list-style: none; padding: 0;">
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">Official HRS Blog</a></li>
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">Investor Relations</a></li>
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">HRS Circle</a></li>
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">HRS Frames</a></li>
-      </ul>
-    </div>
-    <div style="flex: 1; min-width: 150px; padding: 0 10px;">
-      <ul style="list-style: none; padding: 0;">
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">Terms and conditions</a></li>
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">Guest Policies</a></li>
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">Privacy Policy</a></li>
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">Trust And Safety</a></li>
-      </ul>
-    </div>
-    <div style="flex: 1; min-width: 150px; padding: 0 10px;">
-      <ul style="list-style: none; padding: 0;">
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">Cyber Security</a></li>
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">Cyber Security Awareness</a></li>
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">Responsible Disclosure</a></li>
-        <li style="margin-bottom: 10px;"><a href="#" style="color: #fff; text-decoration: none;">Advertise your Homes</a></li>
-      </ul>
-    </div>
-  </div>
-  <hr style="margin-top: 20px; border: none; height: 1px; background-color: #ddd;">
-  <div style="max-width: 960px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
-    <div style="display: flex; align-items: center;">
-      <a href="#" style="color: #fff; text-decoration: none; margin-right: 20px; font-size: 24px;"><i class="fa-brands fa-facebook"></i></a>
-      <a href="#" style="color: #fff; text-decoration: none; margin-right: 20px; font-size: 24px;"><i class="fa-brands fa-instagram"></i></a>
-      <a href="#" style="color: #fff; text-decoration: none; margin-right: 20px; font-size: 24px;"><i class="fa-brands fa-twitter"></i></a>
-      <a href="#" style="color: #fff; text-decoration: none; margin-right: 20px; font-size: 24px;"><i class="fa-brands fa-youtube"></i></a>
-      <a href="#" style="color: #fff; text-decoration: none; margin-right: 20px; font-size: 24px;"><i class="fa-brands fa-pinterest"></i></a>
-    </div>
-    <div>
-      <p style="margin: 0; font-size: 14px;">2025 © Hitaishi Rooms & Service Limited. All rights reserved.</p>
-    </div>
-  </div>
-</div>
+ <!-- post footer -->
+    <footer style="background-color: #333; padding: 20px 0; border-top: 1px solid #ddd;">
+        <div style="max-width: 960px; margin: 0 auto; display: flex; justify-content: space-around; flex-wrap: wrap;">
+            <div style="flex: 1; padding: 0 10px; min-width: 150px;">
+                <p style="margin-bottom: 10px; color: #fff;">Download  HRS app for exciting offers.</p>
+                <div>
+                    <a href="#"><img src="https://static.vecteezy.com/system/resources/thumbnails/012/871/374/small/app-store-download-button-in-white-colors-download-on-the-apple-app-store-free-png.png" alt="App Store" style="width: 120px; margin-right: 10px;"></a>
+                    <a href="#"><img src="https://static.vecteezy.com/system/resources/previews/012/871/364/non_2x/google-play-store-download-button-in-white-colors-download-on-the-google-play-store-free-png.png" alt="Google Play" style="width: 120px;"></a>
+                </div>
+            </div>
+            <div style="flex: 1; padding: 0 10px; min-width: 150px;">
+                <ul style="list-style: none; padding: 0;">
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">About Us</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Teams/Careers</a></li>
+                    <li style="margin-bottom: 5px;"><a href="propertypage.html" style="color: #fff; text-decoration: none;">Blogs</a></li>
+                    <li style="margin-bottom: 5px;"><a href="customerservicehelp.html" style="color: #fff; text-decoration: none;">Support</a></li>
+                </ul>
+            </div>
+            <div style="flex: 1; padding: 0 10px; min-width: 150px;">
+                <ul style="list-style: none; padding: 0;">
+                    <li style="margin-bottom: 5px;"><a href="propertypage.html" style="color: #fff; text-decoration: none;">Official  HRS Blog</a></li>
+                    <li style="margin-bottom: 5px;"><a href="travelagents.html" style="color: #fff; text-decoration: none;">Investor Relations</a></li>
+                    <li style="margin-bottom: 5px;"><a href="hrsbusiness.html" style="color: #fff; text-decoration: none;"> HRS Circle</a></li>
+                    <li style="margin-bottom: 5px;"><a href="hrsbusiness.html" style="color: #fff; text-decoration: none;"> HRS Frames</a></li>
+                </ul>
+            </div>
+            <div style="flex: 1; padding: 0 10px; min-width: 150px;">
+                <ul style="list-style: none; padding: 0;">
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Terms and conditions</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Guest Policies</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Privacy Policy</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Trust And Safety</a></li>
+                </ul>
+            </div>
+            <div style="flex: 1; padding: 0 10px; min-width: 150px;">
+                <ul style="list-style: none; padding: 0;">
+                    <li style="margin-bottom: 5px;"><a href="propertypage.html" style="color: #fff; text-decoration: none;">Cyber Security</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Cyber Security Awareness</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Responsible Disclosure</a></li>
+                    <li style="margin-bottom: 5px;"><a href="about_us.html" style="color: #fff; text-decoration: none;">Advertise your Homes</a></li>
+                </ul>
+            </div>
+        </div>
+        <hr style="margin-top: 20px; border: none; height: 1px; background-color: #ddd;">
+
+
+        <div style="background-color: #333; padding: 20px 0;">
+            <div style="max-width: 960px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center;">
+                <div style="display: flex; align-items: center;">
+                    <a href="https://www.facebook.com/" style="display: inline-block; margin-right: 20px; color: #fff; font-size: 24px;">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" style="display: inline-block; margin-right: 20px; color: #fff; font-size: 24px;">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="https://www.twitter.com/" style="display: inline-block; margin-right: 20px; color: #fff; font-size: 24px;">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="https://www.youtube.com/" style="display: inline-block; margin-right: 20px; color: #fff; font-size: 24px;">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                    <a href="https://www.pinterest.com/" style="display: inline-block; color: #fff; font-size: 24px;">
+                        <i class="fa-brands fa-pinterest"></i>
+                    </a>
+                </div>
+                <div>
+                    <p style="margin: 0; font-size: 14px; color: #fff;">2025 © Hitaishi Rooms & Service Limited. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+       
+       
+    </footer>
 
 
 
